--- a/WebApplication1/TaxOnSpot.csproj
+++ b/WebApplication1/TaxOnSpot.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -160,6 +162,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TaxController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -167,8 +170,30 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Tax_EntityDataModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Tax_EntityDataModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tax_EntityDataModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Tax_EntityDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tax_EntityDataModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Tax_EntityDataModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Tax_Table.cs">
+      <DependentUpon>Tax_EntityDataModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Tax.mdf" />
+    <Content Include="App_Data\Tax_log.ldf">
+      <DependentUpon>Tax.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -224,9 +249,31 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <EntityDeploy Include="Tax_EntityDataModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Tax_EntityDataModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Tax_EntityDataModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Tax_EntityDataModel.edmx</DependentUpon>
+      <LastGenOutput>Tax_EntityDataModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Tax_EntityDataModel.edmx.diagram">
+      <DependentUpon>Tax_EntityDataModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="Tax_EntityDataModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Tax_EntityDataModel.edmx</DependentUpon>
+      <LastGenOutput>Tax_EntityDataModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="Views\Tax\Create.cshtml" />
+    <Content Include="Views\Tax\Delete.cshtml" />
+    <Content Include="Views\Tax\Details.cshtml" />
+    <Content Include="Views\Tax\Edit.cshtml" />
+    <Content Include="Views\Tax\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
